--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.19.0",
     "bignumber.js": "^8.1.1",
     "eos-transit": "^4.0.1",
-    "eos-transit-scatter-provider": "^4.0.1"
+    "eos-transit-scatter-provider": "^4.0.1",
+    "int64_t": "^0.9.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
